28 June 2007

* Shell commands may now be called when parsing the ruleset using $() and %()
  operators:

	%year = %(date +%y)

	$arch = $(uname -m)
	
  These are executed at parse time. Sections between the brackets within "s
  are subject to escape and macro replacement as normal; parts outside
  quotes or inside 's are not. For example:

	$SHELL = "test"
	$cmd = $(echo "${SHELL} $SHELL \${SHELL}")

  Takes advantage of the fact that fdm requires {}s and the shell does not to
  yield:

	added macro "$cmd": "test /bin/ksh /bin/ksh"

  As with macros, commands may be used at any point a string or number is
  appropriate.
* The mail time tags (mail_year, mail_quarter, etc) now use underscores in their
  names rather than dashes, for consistency.
* Deliver append-string is no more, it is trivially replaced using rewrite.
* Built-in cache using TDB (http://sourceforge.net/projects/tdb/). Currently
  disabled by default, enabled by building with make -DDB.

  Used as followed;

	# Declare the cache.
	$db = "~/.fdm.db"
	cache $db expire 2 weeks

	match not string "%[message_id]" to "" {
		# Filter messages already in the cache.	
		match in-cache $db key "%[message_id]"
			action mbox "duplicate-mail"

		# Add message-ids to the cache (any other string can be added
		# but message-ids are most useful).
		match all action to-cache $db key "%[message_id]"
	}

  Note the guard statement - the key can't be empty and news (NNTP) messages
  don't have a message-id.

  I'm still playing a bit with syntax and database backend so don't rely on
  this too much (I'm not convinced using the word "cache" for both news cache
  and this generic cache is a good idea. I'm also not convinced by TDB -
  nice though it is, I need to get a port done and accepted for OpenBSD, and
  I don't know how portable it is generally: BDBv3/4 may be a better option
  although they are a lot more complicated.)

27 June 2007

* New tags taken from the date header corresponding to the current time tags: