@@ -22,7 +22,6 @@
 - deliver to IMAP folder
 - refactor & clean up privsep mail transfer code
 - is there any reason struct mail shouldn't point to a struct account?
-- coalesce multiple IMAP deletions into a single call? is this possible?
 - cumulative effect of a compound action sucks
 - fetch smallest/largest mails first. best pattern? probably 1 small, then in
   decreasing size order, but with longer queue necessary
