@@ -1,3 +1,8 @@
+29 June 2007
+
+* Combine multiple IMAP deletions together into one command where possible,
+  although I doubt it makes any actual difference.
+
 28 June 2007
 
 * Shell commands may now be called when parsing the ruleset using $() and %()
@@ -380,4 +385,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.94 2007-06-28 20:32:23 nicm Exp $
+$Id: CHANGES,v 1.95 2007-06-29 09:35:47 nicm Exp $
